--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "default": "sample-4b0a6",
-    "develop" :"fir-emoji-test"
+    "develop": "fir-emoji-test",
+    "firebase use": "fir-emoji-test"
   }
 }
