--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "sample-4b0a6",
+    "default": "",
     "develop": "fir-emoji-test",
     "firebase use": "fir-emoji-test"
   }
